# sc

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: flashcards-plan.md
recipe/: meta.yaml
sample_curriculum/: char.csv  sentence.csv  vocab.csv
src/: cardgen.py  cli.py  config.py  db.py  importers.py  models.py  render.py  repository.py  review_session.py  scheduler.py  stats.py  validators.py
src/sc/: cli.py  db.py  importers.py  render.py  repository.py  review_session.py  scheduler.py  schema.py  stats.py  validators.py
tests/: test_cardgen.py  test_cli.py  test_importers.py  test_review_session.py  test_scheduler.py  test_schema.py
